test/basic-extensions-v1beta1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
spec:
  backend:
    serviceName: web
    servicePort: 8080
