test/basic-networking-v1beta1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress-netv1b1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  backend:
    serviceName: web
    servicePort: 8080 
  rules:
    - http:
        paths:
          - path: /blahblahblah
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
