test/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-xn-service
spec:
  type: ExternalName
  externalName: 76.127.198.35.bc.googleusercontent.com
