test/ingress-missing-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: default
spec:
  tls:
  - hosts:
      - https-example.foo.com
    secretName: double-secret
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
