test/neg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: externalNameservice
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-nginx"
spec:
  rules:
  - host: 91.211.204.35.bc.googleusercontent.com
    http:
      paths:
      - backend:
          serviceName: external-ip
          servicePort: 80
        path: /
