test/new.yaml
apiVersion: apps/v1
kind: Deployment
namespace: argocd
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3  # You can set the number of replicas here
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest  # You can replace with a specific version if necessary
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: argocd
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80        # Port on which the service is exposed
      targetPort: 80   # Port on the pod
  type: NodePort  # You can change this to ClusterIP or NodePort based on your use case
