test/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: myprivatereg.com:5000/test:105
#        image: npm.qaap.io:5000/busy:1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        stdin: true
        tty: true
        imagePullPolicy: Always

      imagePullSecrets:
      - name: myregistrykey
