test/s.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-new
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
